--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
+    <body>
+    <title>Home Page</title>
+    </head>
     <main>
       <h1>Home page</h1>
+      <h3>Table of contents</h2>
+      <ul>
+        <li><a href="/Lesson1.html">Lesson 1: HTML basics </a></li>
+        <li><a href="/Lesson2.html">Lesson 2: Formatting Tags and Lists</li>
+        <li><a href="/Lesson3.html">Lesson 3: Comments and Attributes</li>
+        <li><a href="/Lesson4.html">Lesson 4: Headings and Paragraphs</li>
+        <li><a href="/Lesson5.html">Lesson 5: Data Tables</li>
+        <li><a href="/Lesson6.html">Lesson 6: Iframes</li>
+        <li><a href="/Lesson7.html">Lesson 7: File Paths</li>
+      </ul>
     </main>
   </body>
 </html>
