new file:   Lesson1.html new file:   Lesson2.html new file:   Lesson3.html new file:   Lesson4.html new file:   Lesson5.html new file:   Lesson6.html new file:   Lesson7.html

--- a/Lesson1.html
+++ b/Lesson1.html
@@ -7,6 +7,7 @@
     <main>
       <h1>Lesson 1: HTML Basics </h1>
       <a href="https://unitc2projectradustoica-q1z0--8080--d3acb9e1.local-credentialless.webcontainer.io">Home Page</a>
+      <a href="/Lesson2.html">Lesson 2</a>
       <p>HTML stands for HyperText Markup Language, the language that makes the World Wide Web possible. HTML was invented by Tim Berners-Lee in 1989. <br> Every html code begins with &lt;!DOCTYPE html&gt;, &lt;html&gt; and ends with &lt;/html&gt;</br>
     <h2> Example HTML code: </h2>
     <p>
