--- a/Lesson2.html
+++ b/Lesson2.html
@@ -7,6 +7,8 @@
     <main>
       <h1>Lesson 2: Formatting Tags and Lists</h1>
       <a href="https://unitc2projectradustoica-q1z0--8080--d3acb9e1.local-credentialless.webcontainer.io">Home Page</a>
+      <a href="/Lesson1.html">Lesson 1</a>
+      <a href="/Lesson3.html">Lesson 3</a>
       <p><b>Formatting Tags</b> - elements that modify the look of text within them </p>
     <h2> Examples of formatting tags </h2>
     <p>
