--- a/Lesson3.html
+++ b/Lesson3.html
@@ -7,6 +7,8 @@
     <main>
       <h1>Lesson 3: Comments and attributes</h1>
       <a href="https://unitc2projectradustoica-q1z0--8080--d3acb9e1.local-credentialless.webcontainer.io">Home Page</a>
+      <a href="/Lesson2.html">Lesson 2</a>
+      <a href="/Lesson4.html">Lesson 4</a>
       <h3> Comments </h3>
       <p> Comments are text hidden within an HTML document. In order to create an HTML comment, you must use the characters "&lt;!--" before the comment text and "--&gt;" after it.
 Example: &lt;!-- This is a single line comment --&gt;
