--- a/Lesson4.html
+++ b/Lesson4.html
@@ -7,6 +7,8 @@
     <main>
       <h1>Lesson 4: Headings and Paragraphs</h1>
       <a href="https://unitc2projectradustoica-q1z0--8080--d3acb9e1.local-credentialless.webcontainer.io">Home Page</a>
+      <a href="/Lesson3.html">Lesson 3</a>
+      <a href="/Lesson5.html">Lesson 5</a>
       <h3> Headings </h3>
       <p>Headings are used to create an outline structure on a web page.
         <br>
