--- a/Lesson5.html
+++ b/Lesson5.html
@@ -7,6 +7,8 @@
     <main>
       <h1>Lesson 5: Data Tables</h1>
       <a href="https://unitc2projectradustoica-q1z0--8080--d3acb9e1.local-credentialless.webcontainer.io">Home Page</a>
+      <a href="/Lesson4.html">Lesson 4 </a>
+      <a href="/Lesson6.html">Lesson 6 </a>
 <h3> Data tables </h3>
       <p>Tables allow web developers to arrange data into a grid-like structure.
 <br>
